--- a/user/register-demo.html
+++ b/user/register-demo.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登陆</title>
+    <title>Register</title>
     <link rel="stylesheet" href="../style/reset.css">
     <script src="/js/jquery-3.5.1.js"></script>
     <script src="/js/jquery.form.js"></script>
 </head>
 <body>
-<!--<div><span>user:</span><span id="user"></span></div>-->
-<form id="form1" method="POST" action="login-check.php" class="login-form">
-    <div class="title">登陆</div>
+<form method="POST" action="" class="register-form" id="form1">
+    <div class="title">注册</div>
     <div class="content">
         <input type="text" name="username" class="username" placeholder="请输入账号"><br>
         <input type="password" name="password" class="password" placeholder="请输入密码"><br>
-        <input type="submit" name="submit" value="登录" class="submit">
-        <div>我是新用户,<a href="register.php">立即注册</a></div>
+        <input type="password" name="re-password" class="password" placeholder="请再次输入密码"><br>
+        <input type="submit" name="submit" value="注册" class="submit">
+        <div>已有账号,<a href="login-demo.html">立即登陆</a></div>
     </div>
 </form>
 <script>
     $(':submit').click(function () {
         $('#form1').ajaxForm({
-            url: 'login-check.php',
+            url: 'register.php',
             success: function (data, status) {
                 alert(data)
                 if (data == 100) {
-                    alert("登录成功")
+                    alert("注册成功")
                 } else if (data == 200) {
                     alert("用户名重复")
+                } else if (data == 300) {
+                    alert("注册失败")
                 }
                 // alert(status);
             }
@@ -37,3 +37,4 @@
     });
 </script>
 </body>
+</html>
