--- a/user/personal-profile/personal-profile-demo.html
+++ b/user/personal-profile/personal-profile-demo.html
@@ -3,14 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal Profile</title>
-    <link rel="stylesheet" href="../style/reset.css">
+    <link rel="stylesheet" href="../../style/reset.css">
     <script src="/js/jquery-3.5.1.js"></script>
     <script src="/js/jquery.form.js"></script>
 </head>
 <body>
-<form id="form1" method="post" action="/utils/file-upload.php">
+<form id="form1" method="POST" action="/utils/file-upload.php" enctype="multipart/form-data">
     请选择您要上传的文件：<input type="file" name='myfile'/>
+    <input type="hidden" name="type" value="header">
     <input type="submit" value="submit">
 </form>
+<script>
+    $(':submit').click(function () {
+        $('#form1').ajaxForm({
+            url: '../../utils/file-upload.php',
+            success: function (data, status) {
+                alert(data)
+                if (data == 100) {
+                    alert("上传成功")
+                } else if (data == 200) {
+                    alert("存储图片失败")
+                }else if(data==300){
+                    alert("头像上传失败")
+                }
+                // alert(status);
+            }
+        });
+    });
+</script>
 </body>
 </html>
