--- a/user/personal-profile/personal-profile.html
+++ b/user/personal-profile/personal-profile.html
@@ -417,26 +417,14 @@
                     <div class="my-account-menu mt-30">
                         <ul class="nav account-menu-list flex-column">
                             <li>
-                                <a class="active" data-toggle="pill" href="#pills-dashboard"><i
-                                        class="fa fa-tachometer"></i> Dashboard</a>
+                                <a class="active" data-toggle="pill" href="#pills-account"><i
+                                        class="fa fa-user"></i> Account Details</a>
                             </li>
                             <li>
                                 <a data-toggle="pill" href="#pills-order"><i class="fa fa-shopping-cart"></i> Order</a>
                             </li>
                             <li>
-                                <a data-toggle="pill" href="#pills-download"><i class="fa fa-cloud-download"></i>
-                                    Download</a>
-                            </li>
-                            <li>
-                                <a data-toggle="pill" href="#pills-payment"><i class="fa fa-credit-card"></i> Payment
-                                    Method</a>
-                            </li>
-                            <li>
                                 <a data-toggle="pill" href="#pills-address"><i class="fa fa-map-marker"></i> Address</a>
-                            </li>
-                            <li>
-                                <a data-toggle="pill" href="#pills-account"><i class="fa fa-user"></i> Account
-                                    Details</a>
                             </li>
                             <li>
                                 <a href="login.html"><i class="fa fa-sign-out"></i> Logout</a>
@@ -444,9 +432,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-8 col-md-8">
+                <div class="col-xl-8 col-md-8 account-right">
                     <div class="tab-content my-account-tab mt-30" id="pills-tabContent">
-                        <div class="tab-pane fade show active" id="pills-dashboard">
+                        <div class="tab-pane fade active" id="pills-account">
                             <div class="header box col-lg-12 col-md-12">
                                 <div class="header__left">
                                     <div class="header__photo"><img class="header__photo-img"
@@ -511,43 +499,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="pills-download">
-                            <div class="my-account-download account-wrapper">
-                                <h4 class="account-title">Download</h4>
-                                <div class="account-table text-center mt-30 table-responsive">
-                                    <table class="table">
-                                        <thead>
-                                        <tr>
-                                            <th class="name">Product</th>
-                                            <th class="date">Date</th>
-                                            <th class="status">Expire</th>
-                                            <th class="action">Download</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <tr>
-                                            <td>Mostarizing Oil</td>
-                                            <td>Aug 22, 2020</td>
-                                            <td>Yes</td>
-                                            <td><a href="#">Download File</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Katopeno Altuni</td>
-                                            <td>July 22, 2020</td>
-                                            <td>Never</td>
-                                            <td><a href="#">Download File</a></td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="pills-payment">
-                            <div class="my-account-payment account-wrapper">
-                                <h4 class="account-title">Payment Method</h4>
-                                <p class="mt-30">You Can't Saved Your Payment Method yet.</p>
-                            </div>
-                        </div>
                         <div class="tab-pane fade" id="pills-address">
                             <div class="my-account-address account-wrapper">
                                 <div class="row">
@@ -567,61 +518,6 @@
                                             <p>1355 Market St, Suite 900 <br> San Francisco, CA 94103</p>
                                             <p>Mobile: (123) 456-7890</p>
                                             <a class="btn btn-primary" href="#"><i class="fa fa-edit"></i> Edit Address</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="pills-account">
-                            <div class="my-account-details account-wrapper">
-                                <h4 class="account-title">Account Details</h4>
-
-                                <div class="account-details">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="single-form">
-                                                <input type="text" placeholder="First Name">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="single-form">
-                                                <input type="text" placeholder="Last Name">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <div class="single-form">
-                                                <input type="text" placeholder="Display Name">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <div class="single-form">
-                                                <input type="text" placeholder="Email address">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <div class="single-form">
-                                                <h5 class="title">Password change</h5>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <div class="single-form">
-                                                <input type="password" placeholder="Current Password">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="single-form">
-                                                <input type="password" placeholder="New Password">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="single-form">
-                                                <input type="password" placeholder="Confirm Password">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="single-form">
-                                                <button class="btn btn-primary">Save Change</button>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
