fix: adjust homepage content

--- a/index.html
+++ b/index.html
@@ -19,33 +19,91 @@
 <div class="main-wrapper">
 
     <!--Header Section Start-->
-    <div class="d-none d-lg-block">
+    <div class="header-section d-none d-lg-block">
         <div class="main-header">
             <div class="container position-relative">
                 <div class="row align-items-center">
-                    <div class="col-lg-3 offset-md-4">
+                    <div class="col-lg-2">
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/images/logo/LOGO.png" alt=""></a>
+                            <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
                         </div>
                     </div>
+                    <div class="col-lg-7 position-static">
+                        <div class="site-main-nav" >
+                            <nav class="site-nav">
+                                <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li>
+                                        <a href="#">Shop</a>
 
-                    <div class="col-lg-3 offset-lg-1">
+                                        <ul class="mega-sub-menu">
+                                            <li><a href="shop-grid-Spring.html">Spring</a></li>
+                                            <li><a href="shop-grid-Summer.html">Summer</a></li>
+                                            <li><a href="shop-grid-Autumn.html">Autumn</a></li>
+                                            <li><a href="shop-grid-Winter.html">Winter</a></li>
+                                            <li><a href="shop-grid-Plants.html">Plants</a></li>
+                                            <li><a href="shop-grid-Birthday.html">Birthday</a></li>
+                                            <li><a href="shop-grid-Wedding.html">Wedding</a></li>
+                                            <li><a href="shop-grid-Sale.html">Sale</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="#">Blog</a>
+
+                                        <ul class="sub-menu">
+                                            <li>
+                                                <a href="#">Blog 1</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="blog1.html">Blog 1-1</a></li>
+                                                    <li><a href="blog1-1.html">Blog1-2</a></li>
+                                                    <li><a href="blog1-2.html">Blog1-3</a></li>
+                                                </ul>
+                                            </li>
+                                            <li>
+                                                <a href="#">Blog 2</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="blog2-1.html">Blog2-1</a></li>
+                                                    <li><a href="blog2-2.html">Blog2-2</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="#">Pages</a>
+                                        <ul class="sub-menu">
+                                            <li><a href="about.html">About Us</a></li>
+                                            <li><a href="cart.html">Cart</a></li>
+                                            <li><a href="wishlist.html">Wishlist</a></li>
+                                            <li><a href="checkout.html">Checkout</a></li>
+
+                                        </ul>
+                                    </li>
+                                    <li><a href="contact.html">Contact Us</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
                         <div class="header-meta-info">
+                            <div class="header-search search-form">
+                                <form action="#">
+                                    <input type="text" placeholder="Search our store ">
+                                    <button><i class="icon-search" style="color: deeppink"></i></button>
+                                </form>
+                            </div>
                             <div class="header-account">
                                 <div class="header-account-list dropdown top-link">
                                     <a href="#" role="button" data-toggle="dropdown"><i class="icon-users"></i></a>
 
                                     <ul class="dropdown-menu ">
-篭‘                                        <li><a href="#">Sign In</a></li>
-                                        <li><a href="#">Register</a></li>
-                                        <li><a href="#">My Account</a></li>
-                                        <li><a href="#">Log Out</a></li>
-
+                                        <li><a href="#">Delivery</a></li>
+                                        <li><a href="#">Settings</a></li>
+                                        <li><a href="#">Logout</a></li>
                                     </ul>
                                 </div>
                                 <div class="header-account-list dropdown mini-cart">
                                     <a href="#" role="button" data-toggle="dropdown">
-                                        <i class="icon-shopping-cart"></i>
+                                        <i class="icon-shopping-bag"></i>
                                         <span class="item-count ">3</span>
                                     </a>
 
@@ -105,12 +163,6 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="header-search offset-lg-1">
-                                <form action="#" class="search-form">
-                                    <input type="text" placeholder="Search our store ">
-                                    <button style="color: deeppink"><i class="icon-search"></i></button>
-                                </form>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -124,7 +176,7 @@
     <div class="header-mobile d-lg-none">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-6">
+                <div class="col -6">
                     <div class="header-logo">
                         <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
                     </div>
@@ -257,72 +309,6 @@
 
     <!--Slider Start-->
     <div class="slider-area">
-        <!--Header Section Start-->
-        <div class="header-section d-none d-lg-block">
-            <div class="main-header" style="background-color: gainsboro">
-                <div class="container position-relative">
-                    <div class="row align-items-center" >
-                        <div class="col-lg-12 position-static offset-lg-4" >
-                            <div class="site-main-nav" >
-                                <nav class="site-nav">
-                                    <ul>
-                                        <li><a href="index.html">Home</a></li>
-                                        <li>
-                                            <a href="#">Shop</a>
-
-                                            <ul class="mega-sub-menu">
-                                                <li><a href="shop-grid-Spring.html">Spring</a></li>
-                                                <li><a href="shop-grid-Summer.html">Summer</a></li>
-                                                <li><a href="shop-grid-Autumn.html">Autumn</a></li>
-                                                <li><a href="shop-grid-Winter.html">Winter</a></li>
-                                                <li><a href="shop-grid-Plants.html">Plants</a></li>
-                                                <li><a href="shop-grid-Birthday.html">Birthday</a></li>
-                                                <li><a href="shop-grid-Wedding.html">Wedding</a></li>
-                                                <li><a href="shop-grid-Sale.html">Sale</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Blog</a>
-
-                                            <ul class="sub-menu">
-                                                <li>
-                                                    <a href="#">Blog 1</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="blog1.html">Blog 1-1</a></li>
-                                                        <li><a href="blog1-1.html">Blog1-2</a></li>
-                                                        <li><a href="blog1-2.html">Blog1-3</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Blog 2</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="blog2-1.html">Blog2-1</a></li>
-                                                        <li><a href="blog2-2.html">Blog2-2</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Pages</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="about.html">About Us</a></li>
-                                                <li><a href="cart.html">Cart</a></li>
-                                                <li><a href="wishlist.html">Wishlist</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact Us</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--Header Section End-->
 
         <div class="swiper-container slider-active">
             <div class="swiper-wrapper">
@@ -850,6 +836,9 @@
                     <div class="swiper-prev"><i class="fa fa-angle-left"></i></div>
                 </div>
             </div>
+            <!-- Add Arrows -->
+            <div class="swiper-next d-lg-block"><i class="fa fa-angle-right"></i></div>
+            <div class="swiper-prev d-lg-block"><i class="fa fa-angle-left"></i></div>
         </div>
     </div>
     <!--New Product End-->
@@ -865,7 +854,7 @@
                     <!--Footer Widget Start-->
                     <div class="col-lg-4 col-md-6">
                         <div class="footer-widget">
-                            <a class="footer-logo" href="#"><img src="assets/images/logo/logo.png" alt=""></a>
+                            <a class="footer-logo" href="#"><img src="assets/images/logo/logo2.png" alt=""></a>
                             <div class="footer-widget-text">
                                 <p>Group 9: Programmers Never Give Up</p>
                             </div>
@@ -911,20 +900,13 @@
     <!--Copyright Section Start-->
     <div class="copyright-section">
         <div class="container">
-            <div class="copyright-wrapper text-center d-lg-flex align-items-center justify-content-between">
+            <div class="copyright-wrapper">
 
                 <!--Right Start-->
-                <div class="copyright-content">
+                <div class="copyright-content" style="text-align: center">
                     <p>Copyright © 2021 Group9_PNG Inc. All Rights Reserved.</p>
                 </div>
                 <!--Right End-->
-
-                <!--Right Start-->
-                <div class="copyright-payment">
-                    <img src="assets/images/payment.png" alt="">
-                </div>
-                <!--Right End-->
-
             </div>
         </div>
     </div>
