--- a/user/register-demo.html
+++ b/user/register-demo.html
@@ -8,7 +8,7 @@
     <script src="/js/jquery.form.js"></script>
 </head>
 <body>
-<form method="POST" action="" class="register-form" id="form1">
+<form method="POST" action="register.php" class="register-form" id="form1">
     <div class="title">注册</div>
     <div class="content">
         <input type="text" name="username" class="username" placeholder="请输入账号"><br>
